{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "39e4073d-3242-446f-8bdd-6703d9d43063",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "9635ccab-df2b-4dc9-b57f-10f897690fe9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "2fe0c7e0-130a-405d-bfc2-8d1588d85ef4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "a4697013-5de6-442c-85a3-92dc93a98c23",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "f63b871e-eab6-4dfa-a2c7-0a737aca1f7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "63caf650-fd3f-430f-9f99-42b5572f5407",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UnlockCursor",
                    "type": "Button",
                    "id": "55b63302-ba59-476c-81fc-a6bba73cb860",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LockCursor",
                    "type": "PassThrough",
                    "id": "1ebdbc93-f8cc-4971-a248-5e3a77167d75",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "dd1f6957-185a-47af-8a0c-f15f2c86f6d9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f565746a-8edf-49f7-929e-cd77737eb7f1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e45e35be-36ac-4b05-8043-628ce90fbee8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a97f7aae-8436-4716-8415-94e1df3a826c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d633019c-3bf0-4739-86c5-51ea80c70cac",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4d9d4f57-cb0c-4a85-8704-ca0e5b274090",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "895dcbe5-eaea-4413-9089-669b4899b3f9",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72dd15e8-16b6-4499-b97a-680547b20797",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnlockCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bef9c6da-40f1-45df-a46e-781d9f757f41",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80f43e12-58ea-4986-92a7-999eb5abec5d",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db625b3f-9dcd-464b-9ed6-f57c8c7a01f3",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "Normalize(max=1)",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}